--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/codecell/next-web-clone#readme",
   "devDependencies": {
-    "stylelint": "^12.0.1"
+    "stylelint": "^12.0.1",
+    "stylelint-config-recommended": "^3.0.0"
   }
 }
